2005-11-09  Atsushi Enomoto <atsushi@ximian.com>

	* XmlConvert.cs : VerifyNCName() and VerifyName() throws
	  ArgumentNullException for "".

2005-11-07  Atsushi Enomoto <atsushi@ximian.com>

	* XmlReader.cs : dependent XmlSchemaValidationFlags fix.
	  Added ReadElementContentAsObject() and ReadContentAsObject().
	* XmlReader.cs, XmlTextReader.cs :
	  LookupNamespace(string,bool) is now private.
	* XmlReader.cs, XmlNode,cs :
	  [DebuggerDisplay].

2005-11-07  Atsushi Enomoto <atsushi@ximian.com>

	* XmlElement.cs, XmlCDataSection.cs, XmlText.cs, XmlWhitespace.cs,
	  XmlSignificantWhitespace.cs : added ParentNode overrides (actually
	  they don't make sense since it just calls base.)
	* XmlNode.cs, XmlDocument.cs : changed .NET 2.0 CreateNavigator() impl
	  to match signature and skip OwnerDocument check in XmlNode (since
	  it is overriden). Maybe MS does not have ownerDocument as a field and
	  costs too much on OwnerDocument property.
	  Added missing bits in XmlDocument.

2005-11-07  Atsushi Enomoto <atsushi@ximian.com>

	* XmlAttribute.cs : added new overrides in 2.0 RTM (this scarcely
	  makes sense without real optimization though).
	* XmlDocument.cs, XmlElement.cs, XmlNode.cs : avoid ChildNodes and
	  save extra XmlNodeList creation cost.

2005-11-07  Atsushi Enomoto <atsushi@ximian.com>

	* XmlNamespaceManager.cs : NameTable is virtual in 2.0 RTM.
	* XmlReader.cs : IsEmptyElement is reverted to be abstract in 2.0 RTM.
	  ReadTypedValue() is removed.
	* XmlValidatingReader.cs : ReadTypedValue() is not virtual now.
	* XmlWriter.cs : Settings is virtual.

2005-10-23  Atsushi Enomoto <atsushi@ximian.com>

	* XmlDocumentNavigator.cs : now MoveToFirst() invokes internal
	  MoveToFirstImpl().

2005-10-23  Atsushi Enomoto <atsushi@ximian.com>

	* XmlTextWriter.cs : oops, so WriteState.Error is NET_2_0 only.

2005-10-23  Atsushi Enomoto <atsushi@ximian.com>

	* XmlTextWriter.cs : (Error state check) actually I need to set Error.
